# transcribe-meeting

./: .envrc.example  .gitignore  LICENSE  README.md  flake.nix  module.nix  pyproject.toml
src/transcribe_meeting/: main.py
