[project]
name = "transcribe-meeting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy", "websockets"]

[project.scripts]
transcribe-meeting = "transcribe_meeting.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
